--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 *.user
 *.userosscache
 *.sln.docstates
-
+/MyBillBooks/UserDATA.cs
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
