--- a/MyBillBooks/MyBillBooks.csproj
+++ b/MyBillBooks/MyBillBooks.csproj
@@ -45,6 +45,12 @@
       <HintPath>..\packages\Iesi.Collections.4.0.1.4000\lib\net40\Iesi.Collections.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.Office.Interop.Excel, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+      <HintPath>..\packages\Microsoft.Office.Interop.Excel.15.0.4795.1000\lib\net20\Microsoft.Office.Interop.Excel.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <HintPath>..\packages\MySql.Data.6.9.9\lib\net45\MySql.Data.dll</HintPath>
       <Private>True</Private>
@@ -66,6 +72,7 @@
   <ItemGroup>
     <Compile Include="Bean\BillItem.cs" />
     <Compile Include="ClassForTestcs.cs" />
+    <Compile Include="Dao\BillItemDao.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -86,6 +93,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\BillItemService.cs" />
     <Compile Include="UserDATA.cs" />
     <Compile Include="Util\NHibernateUtils.cs" />
     <EmbeddedResource Include="Form1.dyo-SN.resx">
@@ -93,6 +101,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ItemInsertForm.resx">
+      <DependentUpon>ItemInsertForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ItemSelectForm.resx">
       <DependentUpon>ItemSelectForm.cs</DependentUpon>
