--- a/MyBillBooks/packages.config
+++ b/MyBillBooks/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Iesi.Collections" version="4.0.1.4000" targetFramework="net45" />
+  <package id="Microsoft.CSharp" version="4.3.0" targetFramework="net45" />
+  <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net45" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net45" />
   <package id="NHibernate" version="4.1.1.4000" targetFramework="net45" />
 </packages>
