--- a/MyBillBooks/packages.config
+++ b/MyBillBooks/packages.config
@@ -4,5 +4,6 @@
   <package id="Microsoft.CSharp" version="4.3.0" targetFramework="net45" />
   <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net45" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net45" />
   <package id="NHibernate" version="4.1.1.4000" targetFramework="net45" />
 </packages>
