--- a/MyBillBooks/packages.config
+++ b/MyBillBooks/packages.config
@@ -1,9 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Iesi.Collections" version="4.0.1.4000" targetFramework="net45" />
-  <package id="Microsoft.CSharp" version="4.3.0" targetFramework="net45" />
+  <package id="Antlr3.Runtime" version="3.5.1" targetFramework="net461" />
+  <package id="Iesi.Collections" version="4.0.2" targetFramework="net461" />
+  <package id="Microsoft.CSharp" version="4.4.0" targetFramework="net461" />
   <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net45" />
-  <package id="MySql.Data" version="6.9.9" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net45" />
-  <package id="NHibernate" version="4.1.1.4000" targetFramework="net45" />
+  <package id="MySql.Data" version="6.10.4" targetFramework="net461" />
+  <package id="NHibernate" version="5.0.3" targetFramework="net461" />
+  <package id="Remotion.Linq" version="2.1.2" targetFramework="net461" />
+  <package id="Remotion.Linq.EagerFetching" version="2.1.0" targetFramework="net461" />
+  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net461" />
 </packages>
